# validator-tg-bot

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tgbot.yaml
handlers/: different_types.py  filters.py  track.py
keyboards/: for_questions.py
settings/: reader.py
tools/: json_t.py  message.py  sql.py
