[tool.poetry]
name = "validator-tg-bot"
version = "0.1.0"
description = "Music Data Validation and Database Bot"
authors = ["hachimaru <74972395+xxspell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.1.0"
ruff = "^0.3.3"
aiogram = "^3.2.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
        "F811",
        "E203"
        ]
line-length = 120
